--- a/styles1.css
+++ b/styles1.css
@@ -126,7 +126,7 @@ body{
 /* Home page */
 
 #hero{
-      background-image: url("img/hero4.jpeg");
+      background-image: url("hero4.jpeg");
       height: 90vh;
       width: 100%;
       background-size: cover;
@@ -140,25 +140,25 @@ body{
 }
 @keyframes slide{
     25%{
-        background: url('img/hero4.jpeg');
+        background: url('hero4.jpeg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top 25% right 60;
     }
     50%{
-        background: url('img/hero3.jpg');
+        background: url('hero3.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top 25% right 60;
     }
     75%{
-        background: url('img/hero2.jpg');
+        background: url('hero2.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top 25% right 60;
     }
     100%{
-        background: url('img/hero1.jpeg');
+        background: url('hero1.jpeg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position: top 25% right 60;
@@ -171,7 +171,7 @@ body{
       color: #6af5ff;
 }
 #hero button{
-      background-image: url(img/button.png);
+      background-image: url(button.png);
       background-color: transparent;
       color: #1a2d2bef;
       border: 0;
@@ -294,7 +294,7 @@ h6{
       justify-content:center;
       align-items: center ;
       text-align: center ;
-      background-image: url(img/banner.jpeg);
+      background-image: url(banner.jpeg);
       width: 100%;
       height: 40vh;
       background-size: cover;
@@ -338,7 +338,7 @@ h6{
       padding-top: 10px;
       border:1px solid #cce7d0;
       cursor:pointer;
-      background-image: url(img/product1.jpg);
+      background-image: url(product1.jpg);
       margin: 15px 0;
 }
 #sm-banner .banner-box2{
@@ -348,7 +348,7 @@ h6{
       padding-top: 10px;
       border:1px solid #cce7d0;
       cursor:pointer;
-      background-image: url(img/product2.jpg);
+      background-image: url(product2.jpg);
       margin: 15px 0;
 }
 #sm-banner h4{
@@ -379,7 +379,7 @@ h6{
       padding-top:0;
       border:1px solid #cce7d0;
       cursor:pointer;
-      background-image: url(img/sticker1.jpeg);
+      background-image: url(sticker1.jpeg);
       margin: 15px 0;
 }
 #sm-banner2 .banner-box2{
@@ -389,7 +389,7 @@ h6{
       padding-top:0;
       border:1px solid #cce7d0;
       cursor:pointer;
-      background-image: url(img/sticker2.jpeg);
+      background-image: url(sticker2.jpeg);
       margin: 15px 0;
 }
 #sm-banner2 .banner-box3{
@@ -399,7 +399,7 @@ h6{
       padding-top:0;
       border:1px solid #cce7d0;
       cursor:pointer;
-      background-image: url(img/sticker3.jpeg);
+      background-image: url(sticker3.jpeg);
       margin: 15px 0;
 }
 #sm-banner span{
@@ -507,7 +507,7 @@ footer .copyright {
 }
 /* shop page */
 #page-header{
-      background-image: url(img/page.jpeg);
+      background-image: url(page.jpeg);
       width: 100%;
       height: 40vh;
       background-size: cover;
